# MineCraft-clone-

./: .gitignore  KinematicBody.tscn  MeshInstance.gd  Player.gd  Player.tscn  PlayerModel.tscn  Player_Model.tres  Player_Model_material.tres  README.md  Spatial.gd  Spatial.tscn  VoxelWorld.tscn  atlas.png.import  blozxs.meshlib  new_atlastexture.tres  new_spatialmaterial.tres  player_test.tscn  project.godot  test.gd  test.tscn  teste.tscn  voxel_test.tscn  water_test.tscn
assets/: new_atlastexture.tres  new_spatialmaterial.tres
assets/3d models/: Player-BB.bbmodel  Player.gltf  Player.gltf.import  character.blend  character.blend1  character.glb  character.glb.import  human2.png.import
assets/imgs/: atlas.png.import  atlas.svg.import  atlas.xcf  human.png.import  human.xcf
src/: KinematicBody.gd  Node.gd  VoxelSistem.gdns  atlas.png.import  atlas.xcf  blocks.gd  blocks.tres  boat.gd  debug.gd  final_test.gdns  godot_test.gdns  new_script.gdns  sun.gd  test.gdns  voxel_chunk.gd
src/VoxelSistem/: Cargo.toml
src/VoxelSistem/src/: lib.rs
src/VoxelTerrain/: Cargo.toml
src/VoxelTerrain/src/: lib.rs
src/VoxelTool/: Cargo.toml
src/VoxelTool/src/: lib.rs  voxel_chunk.rs
src/VoxelTool/src/voxel_chunk/: voxel.rs
src/godot/: Cargo.toml
src/godot/src/: lib.rs  voxelchunk.rs
src/voxel_idk_anymore/: Cargo.toml
src/voxel_idk_anymore/src/: lib.rs
