[package]
name = "godot"
version = "0.1.0"
authors = ["Victor Randall <victor.randall13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# install bindgen: apt install llvm-dev libclang-dev clang

[dependencies]
gdnative = "0.9.3"

[lib]
crate-type = ["cdylib"]
